--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "logging",
     "log",
     "log4j",
-    "mslog",
+    "mslog4js",
     "node"
   ],
   "license": "Apache-2.0",
   "main": "./lib/log4js",
   "author": {
-    "name": "Gareth Jones",
-    "email": "gareth.nomiddlename@gmail.com"
+    "name": "Jay",
+    "email": "474188765@qq.com"
   },
   "repository": {
     "type": "git",
@@ -38,25 +38,5 @@
     "jshint": "^2.9.2",
     "sandboxed-module": "0.1.3",
     "vows": "0.7.0"
-  },
-  "browser": {
-    "os": false
-  },
-  "gitHead": "6c21e4acd90047525d34ac4f4740e8ee0dba3bc2",
-  "homepage": "https://github.com/nomiddlename/mslog4js-node#readme",
-  "_id": "mslog4js@1.0.0",
-  "_shasum": "2c494116695d6fb25480943d3fc872e662a522fd",
-  "_npmVersion": "3.8.9",
-  "_nodeVersion": "6.2.0",
-  "_npmUser": {
-    "name": "csausdev",
-    "email": "gareth.nomiddlename@gmail.com"
-  },
-  "maintainers": [
-    {
-      "name": "csausdev",
-      "email": "gareth.jones@sensis.com.au"
-    }
-  ],
-  "readme": "ERROR: No README data found!"
+  }
 }
