--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mslog4js",
-  "version": "0.9.0",
+  "version": "0.9.2",
   "description": "Port of Log4js to work with node.",
   "keywords": [
     "logging",
@@ -10,7 +10,7 @@
     "node"
   ],
   "license": "Apache-2.0",
-  "main": "./lib/log4js",
+  "main": "./lib/main",
   "author": {
     "name": "Jay",
     "email": "474188765@qq.com"
@@ -31,6 +31,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "readable-stream": "~1.0.2",
     "semver": "~4.3.3"
   },
